--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,14 @@
     <div class="container-fluid text-center">
       <h1 class="mt-5">Hello Rigo!</h1>
       <img src="./rigo-baby.jpg" />
-      <p id="domain-name" class="alert alert-warning mt-4"></p>
+      <div class="alert alert-success mt-4">
+        <i class="fas fa-link"></i>
+        <a id="domain-name" href=""> </a>
+      </div>
+      <!-- themed button to generate a new link -->
+      <button class="btn btn-primary" id="generate-link">
+        <i class="fas fa-magic"></i> Generate Link
+      </button>
       <div class="fixed-bottom p-4">
         Made with ❤️ by
         <a href="https://www.github.com/justmrmendez">Mr. Mendez</a>
@@ -24,3 +31,9 @@
     </div>
   </body>
 </html>
+
+<style>
+  i {
+    margin-right: 5px;
+  }
+</style>
